--- a/web/themes/udsm/css/style.css
+++ b/web/themes/udsm/css/style.css
@@ -6537,6 +6537,13 @@ padding: 2%;
     background:#225dcd !important;
 }
 
+.programs {
+	background-color: #225dcd;
+	color: #fff;
+	border: none;
+}
+
+
 
 
 
