--- a/web/themes/udsm/layouts/college/html/programmes.html
+++ b/web/themes/udsm/layouts/college/html/programmes.html
@@ -444,26 +444,39 @@
                             </li>
                          </div>
 
-                         <div class="courses" id="list1">
-                            <a href="#">Accounting & Finance</a>
-                            <a href="#">Accounting & Commerce</a>
-
-                            <hr>
-                         </div>
-
-                          <div class="courses" id="list2">
-                            <a href="#">BCOM</a>
-                            <a href="#">Business Administration</a>
-
-                            <hr>
-                         </div>
-
-                           <div class="courses" id="list3">
-                            <a href="#">Computer Science</a>
-                            <a href="#">Computer Engineering</a>
-
-                            <hr>
-                         </div>
+                   <table class="table">
+                          <thead class="programs">
+                            <tr>
+                              <th>Course Name</th>
+                              <th>Course Code</th>
+                              
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <td><a href="#">Accounting & Finance</a></td>
+                              <td>AC100</td>
+                             
+                            </tr>
+                            <tr>
+                              <td><a href="#">Accounting & Commerce</a></td>
+                              <td>AC300</td>
+                             
+                            </tr>
+                             <tr>
+                              <td><a href="#">Computer Science</a></td>
+                              <td>CS489</td>
+                             
+                            </tr>
+                             <tr>
+                              <td><a href="#">Computer Engineering</a></td>
+                              <td>CE134</td>
+                             
+                            </tr>
+                           
+                          
+                          </tbody>
+                        </table>
 
 
 
