change in homepage slideshow
change in homepage slideshow

--- a/web/themes/udsm/css/responsive.css
+++ b/web/themes/udsm/css/responsive.css
@@ -622,6 +622,11 @@
 		position: relative !important;
 		width: 100% !important;
 	}
+	.sticky-wrapper.is-sticky #sticker,
+	.sticky-wrapper{
+	
+	margin-bottom: 0px !important;
+}
 }
 
 /******************************************************************************
