--- a/html/css/responsive.css
+++ b/html/css/responsive.css
@@ -250,6 +250,8 @@
     .timeliner>li.timeline-inverted>.timeline-panel {
         padding: 0 20px 20px;
     }
+
+
 	
 	/*Side nav bar*/
 	.side-nav-wrapper {
@@ -534,6 +536,10 @@
 	.navbar-collapse .navbar-nav{
 		padding-bottom:10px;
 	}
+
+	.nkrumah-bg {
+		display: none;
+	}
 	
 	header .navbar-form{
 		margin:none;
@@ -622,6 +628,12 @@
 		position: relative !important;
 		width: 100% !important;
 	}
+
+	.sticky-wrapper.is-sticky #sticker,
+	.sticky-wrapper{
+	
+	margin-bottom: 0px !important;
+}
 }
 
 /******************************************************************************
