--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1545,7 +1545,7 @@ i,
 .sticky-wrapper.is-sticky #sticker,
 .sticky-wrapper{
 	z-index:9999;
-	margin-bottom: -8px;
+	margin-bottom: -32px;
 }
 
 .site_logo {
@@ -6594,11 +6594,11 @@ padding: 2%;
 }
 
 .uni-heading {
-	margin-top: 40px;
+	margin-top: 35px;
 }
 .uni-heading span{
 	color: #fff;
-	font-size: 25px;
+	font-size: 28px;
 	text-align: center;
 	
 }
@@ -6612,5 +6612,74 @@ padding: 2%;
 }
 
 
+#search {
+    position: fixed;
+   	width: 500px;
+	height: 200px;
+	top: 50%;
+	left: 50%;
+	margin-top: -100px; /* Negative half of height. */
+	margin-left: -250px;
+	border-radius: 4px;
+	border-top: 3px solid #0b1e42;
+    background-color: rgba(255, 255, 255, 0.9);
+    -webkit-transition: all 0.5s ease-in-out;
+       -moz-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+	       -o-transition: all 0.5s ease-in-out;
+            transition: all 0.5s ease-in-out;
+    -webkit-transform: translate(0px, -100%) scale(0, 0);
+	     -moz-transform: translate(0px, -100%) scale(0, 0);
+	      -ms-transform: translate(0px, -100%) scale(0, 0);
+         -o-transform: translate(0px, -100%) scale(0, 0);
+	          transform: translate(0px, -100%) scale(0, 0);    
+    opacity: 0;
+    display: none;
+    z-index: 100000000 !important;
+}
 
+#search.open {
+    -webkit-transform: translate(0px, 0px) scale(1, 1);
+       -moz-transform: translate(0px, 0px) scale(1, 1);
+    	  -ms-transform: translate(0px, 0px) scale(1, 1);
+	       -o-transform: translate(0px, 0px) scale(1, 1);
+	           transform: translate(0px, 0px) scale(1, 1); 
+    opacity: 1;
+    z-index: 106;
+    display: block;
+}
 
+#search input[type="search"] {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -51px;
+    width: 60%;
+    margin-left: 20%;
+    color: #333;
+  	background: transparent;
+  	border-top: 1px solid #0b1e42;
+  	border-bottom: 1px solid #0b1e42;
+  	border-left: 0px solid transparent;
+  	border-right: 0px solid transparent;
+    font-size: 30px;
+  	/*font-family: Roboto;*/
+    font-weight: 300;
+    text-align: center;
+    outline: none;
+  	padding: 10px;
+}
+  
+#search .close {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+	  opacity: 1;
+	  font-size: 27px;
+  	color: #FF0000;
+}
+
+#search .close:hover{
+  color: #FF0000;
+  cursor: pointer;
+}						
